Make menu flexbox. Add spacing to menu subheadings. Edit themes to correctly highlight subheaders.

--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -3,25 +3,29 @@
   flex: auto;
   user-select: none;
   /* transition: .2s ease-in; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .sidebar--menu--header {
   cursor: default;
   text-align: center;
   border-top: 2px solid black !important;
+  width: 100%;
+  padding: 15px 0px;
 }
 
 .sidebar--menu--header,
 .sidebar--menu--sub-header,
 .sidebar--menu--detail {
   cursor: pointer;
-  border: 1px solid black;
   outline: none;
 }
 
 .sidebar--menu--sub-header:hover,
 .sidebar--menu--detail:hover {
-  background: rgba(39, 145, 152, 0.52) !important;
+  background: rgba(0,0,0,0.08);
 }
 
 .sidebar--menu:last-child {
@@ -31,7 +35,16 @@
 .sidebar--menu--header,
 .sidebar--menu--sub-header {
   font-size: 20px;
-  padding: 2px 0 2px 10px;
+}
+
+.sidebar--menu--sub-header {
+  display: flex;
+  align-items: center;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  background: rgba(0,0,0,0.05);
+  padding: 15px;
+  transition: all 300ms;
 }
 
 .sidebar--menu--sub-header.sub,
@@ -67,4 +80,10 @@
 
 .sidebar--menu--detail--button.resources {
     margin-right: 5px;
+}
+
+details {
+  margin-top: 10px;
+  margin-bottom: 40px;
+  width: 60%;
 }
